--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,8 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ['main']
+    paths:
+      - 'apps/client/**'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -36,12 +38,13 @@ jobs:
         with:
           node-version: lts/*
           cache: 'npm'
+          cache-dependency-path: 'apps/client/package-lock.json'
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build
-        run: npm run build
+      - name: Install dependencies and build
+        run: |
+          cd apps/client/
+          npm ci
+          npm run build
         env:
           VITE_SERVER_IP: ${{ secrets.VITE_SERVER_IP }}
 
@@ -52,7 +55,7 @@ jobs:
         uses: actions/upload-pages-artifact@v4
         with:
           # Upload dist folder
-          path: './dist'
+          path: './apps/client/dist'
 
       - name: Deploy to GitHub Pages
         id: deployment
