--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -16,6 +16,7 @@
   "main": "server.ts",
   "scripts": {
     "start": "node dist/server.js",
+    "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc -b",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
