--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "apps/*"
   ],
   "scripts": {
-    "build": "npm run build:server && npm run build:client",
     "build:server": "cd apps/server && npm run build",
     "build:client": "cd apps/client && npm run build",
+    "dev:server": "npm run build:server && cd apps/server && npm run dev",
+    "dev:client": "cd apps/client && npm run dev",
+    "build": "npm run build:server && npm run build:client",
+    "dev": "concurrently \"npm run dev:server\"  \"npm run dev:client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +24,10 @@
   "bugs": {
     "url": "https://github.com/rescheer/orkestral/issues"
   },
-  "homepage": "https://github.com/rescheer/orkestral#readme"
+  "homepage": "https://github.com/rescheer/orkestral#readme",
+  "devDependencies": {
+    "concurrently": "^9.2.1",
+    "nodemon": "^3.1.11",
+    "ts-node": "^10.9.2"
+  }
 }
