various development-side fixes

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -16,11 +16,12 @@
   "main": "server.ts",
   "scripts": {
     "start": "node dist/server.js",
-    "dev": "nodemon --exec ts-node src/server.ts",
+    "dev": "tsx watch src/server.ts",
     "build": "tsc -b",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@orkestral/shared": "^1.0.0",
     "ws": "^8.18.3"
   },
   "devDependencies": {
