--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -23,6 +23,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@orkestral/shared": "^1.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
