--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -1,4 +1,11 @@
 {
+  "compilerOptions": {
+    "composite": true,
+    "baseUrl": ".",
+    "paths": {
+      "@orkestral/shared": ["../../packages/shared/src/index.ts"]
+    }
+  },
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
