--- a/package.json
+++ b/package.json
@@ -7,13 +7,10 @@
     "packages/*"
   ],
   "scripts": {
-    "build:server": "cd apps/server && npm run build",
-    "build:client": "cd apps/client && npm run build",
-    "dev:server": "npm run build:server && cd apps/server && npm run dev",
-    "dev:client": "cd apps/client && npm run dev",
-    "build": "npm run build:server && npm run build:client",
-    "dev": "concurrently \"npm run dev:server\"  \"npm run dev:client\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -b",
+    "dev": "concurrently \"tsc -b -w\" \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:server": "tsx watch apps/server/src/server.ts",
+    "dev:client": "cd apps/client && npm run dev"
   },
   "repository": {
     "type": "git",
@@ -28,6 +25,7 @@
   "homepage": "https://github.com/rescheer/orkestral#readme",
   "devDependencies": {
     "concurrently": "^9.2.1",
-    "tsx": "^4.21.0"
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
