render: switch region to oregon

--- a/render.yaml
+++ b/render.yaml
@@ -2,20 +2,15 @@ services:
   - type: web
     name: orkestral-server
     env: node
-    plan: free # or 'starter'
-    region: ohio # choose your preferred region
+    plan: free
+    region: oregon
     
-    # Crucial for monorepos: build from the root to access @orkestral/shared
     rootDir: .
 
-    # 1. Install all dependencies
-    # 2. Use 'tsc -b' to compile the shared package and then the server
     buildCommand: npm install && npx tsc -b
 
-    # Run the compiled server entry point
     startCommand: node apps/server/dist/server.js
 
-    # Only trigger a build if code in these folders changes
     buildFilter:
       paths:
         - apps/server/**
@@ -23,6 +18,6 @@ services:
 
     envVars:
       - key: NODE_VERSION
-        value: 20 # Or your preferred version
+        value: 20
       - key: PORT
         value: 10000
